--- a/aboutdotcom.html
+++ b/aboutdotcom.html
@@ -3,15 +3,16 @@
 <head>
 	<title>Dotcom</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="layout.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div class="topheading">
 		<label for="toggle">&#9776;</label>
 		<input type="checkbox" id="toggle"/>
 		<div class="sidenav">
-			<a href="http://localhost/apitut/Dotcom/dotcom.html">WORLD</a>
-			<a href="http://localhost/apitut/Dotcom/dotcomin.html" >INDIA</a>
+			<center><img src="png/logo6.png" id="logo"/></center>
+			<a href="dotcom.html">WORLD</a>
+			<a href="dotcomin.html" >INDIA</a>
 			<a href="" class="active">ABOUT</a>
 		</div>	
 	</div>
