--- a/aboutdotcom.html
+++ b/aboutdotcom.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Dotcom</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="png/logo6.png"/>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -11,9 +12,9 @@
 		<input type="checkbox" id="toggle"/>
 		<div class="sidenav">
 			<center><img src="png/logo6.png" id="logo"/></center>
-			<a href="dotcom.html">WORLD</a>
+			<a href="index.html">WORLD</a>
 			<a href="dotcomin.html" >INDIA</a>
-			<a href="" class="active">ABOUT</a>
+			<a href="aboutdotcom.html" class="active">ABOUT</a>
 		</div>	
 	</div>
 	<div class="container">
