--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Dotcom</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="png/logo6.png"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 	<link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
@@ -30,6 +29,7 @@
 	</div>
 	<div class="container">
 		<div id="map_and_image">
+			<div id="right_img_notice" class="caption">Tap on various countries and get insights of networking sites.</div>
 			<div id="heremap"></div>
 			<div id="right_img"><img src="png/corel-ig-illustration.png"></div>
 		</div>
